--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+# Anything ending with ".env" (I named my file "Environment.env", may change that in the future)
+*.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -128,3 +130,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# SQLite database
+*.db
