--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve-favicon": "^2.5.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "nodemailer":"^6.9.5"
   }
 }
