--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.5",
+    "passport": "^0.6.0",
+    "passport-magic-link": "^2.1.0",
     "pg": "^8.11.2",
     "pug": "^3.0.2",
     "sequelize": "^6.32.1",
     "serve-favicon": "^2.5.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
-    "validator": "^13.9.0",
-    "nodemailer":"^6.9.5"
+    "validator": "^13.9.0"
   }
 }
